# internal/api/user/addUser_register.go
@@ -46,7 +46,8 @@ func (i *ImplementationUser) AddUser(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	addUserInfo, err := i.UserService.AddUser(r.Context(), convertor.FromApiAddUserService(&params))
+	admin := false
+	addUserInfo, err := i.UserService.AddUser(r.Context(), convertor.FromApiAddUserService(&params), admin)
 	if err != nil {
 		log.Printf("Error registering user: %v\n", err)
 		api.RespondWithError(w, 401, fmt.Sprintf("Couldn't registering user : %v", err))
@@ -56,6 +57,50 @@ func (i *ImplementationUser) AddUser(w http.ResponseWriter, r *http.Request) {
 	api.RespondWithJSON(w, 201, addUserInfo)
 	log.Printf("user %s is registered", params.Name)
 }
-func (i *ImplementationUser) Test(w http.ResponseWriter, r *http.Request) {
-	api.RespondWithJSON(w, 201, "all rigth")
+
+
+// registration of user as admin 
+// @Summary Register a new user with admin permissions
+// @Description Register a new user with the provided details as admin
+// @ID registerUserAdmin
+// @Accept json
+// @Produce json
+// @Param body body model.Register true "User registration details"
+// @Success 201 {object} model.UserRequestModel "User registered successfully"
+// @Failure 400 {object} model.ErrResponse "Invalid JSON or missing fields"
+// @Failure 500 {object} model.ErrResponse "Failed to register user"
+// @Router /registerAdmin [post]
+func (i *ImplementationUser) AddUserAdmin(w http.ResponseWriter, r *http.Request) {
+	if r.Method != http.MethodPost {
+		api.RespondWithError(w, 400, fmt.Sprintf("Wrong method: %s", r.Method))
+		return
+	}
+
+	params := model.Register{}
+
+	decoder := json.NewDecoder(r.Body)
+	err := decoder.Decode(&params)
+	
+	if err != nil {
+		log.Printf("Error while decoding register JSON: %v\n", err)
+		api.RespondWithError(w, 400, fmt.Sprintf("Error parsing JSON: %v", err))
+		return
+	}
+
+	if validErrs := validator.ValidateUserAddRequest(&params); len(validErrs) > 0 {
+		log.Printf("Invalid JSON: %v", validErrs)
+		api.RespondWithError(w, 400, fmt.Sprintf("Invalid JSON: %v", validErrs))
+		return
+	}
+
+	admin := true
+	addUserInfo, err := i.UserService.AddUser(r.Context(), convertor.FromApiAddUserService(&params), admin)
+	if err != nil {
+		log.Printf("Error registering user: %v\n", err)
+		api.RespondWithError(w, 401, fmt.Sprintf("Couldn't registering user : %v", err))
+		return
+	}
+
+	api.RespondWithJSON(w, 201, addUserInfo)
+	log.Printf("user %s with admin permissions is registered", params.Name)
 }
